2006-05-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* MANIFEST.in:
	  Fixed to include everything from data dir.

	* data/gaupol.desktop:
	  Removed icon extension.

	* data/icons/gaupol.png:
	* data/icons/gaupol.svg:
	  New icons.

	* lib/gaupol/gtk/delegates/guiinit.py:
	* lib/gaupol/gtk/dialogs/about.py:
	  Get icon from theme.

	* setup.py:
	  Install icons to hicolor theme.

2006-05-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialogs/filechooser.py:
	  Added a separator in the encoding combo box.

2006-05-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.4.1 due to branch release.

2006-05-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/tags/__init__.py:
	* lib/gaupol/base/tags/ssa.py:
	* lib/gaupol/base/tags/subrip.py:
	  Replaced None flags with zeros.

	* lib/gaupol/base/util/relib.py:
	  Removed constant NONE.

	* lib/gaupol/gtk/delegates/timeframe.py:
	  Fixed bug #5880.

2006-05-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/add-changelog:
	* tools/profile:
	* tools/py.test:
	* tools/pydoc:
	* tools/pyenchant:
	* tools/pylint:
	* tools/status:
	  Cosmetic changes.

	* tools/translate:
	  Fixed paths.

2006-05-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/translate:
	  Renamed from trantool.

2006-05-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	* lib/gaupol/gtk/main.py:
	  Cleaned up start-stuff and moved most of stuff to main.py.

	* tools/profile:
	  Adapted to changes in lib/gaupol/gtk/main.py.

2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	  Removed profile and pydoc options.
	  Removed psyco.
	  Removed paths module configuration.

	* lib/gaupol/gtk/paths.py:
	  Use relative paths by default.

	* tools/profile:
	* tools/pydoc:
	  New files.

2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/add-changelog:
	* tools/status:
	  New files.

2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/py.test:
	* tools/pyenchant:
	* tools/pylint: