@@ -20,6 +20,8 @@ Plans for 0.5.0
       - string.Template for preview command?
       - Framerate conversion available for time-based subs
       - Put a .pot file in the trunk
+      - Mime-type registration?
+      - Remove --no-translation option?
 
   * setup.py / setup.cfg
       - Add test module to MANIFEST.in
